--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet />
+<app-header></app-header>
+
+<main class="main">
+  <app-countdown></app-countdown>
+  <router-outlet />
+</main>
