- count down timer

--- a/src/app/components/countdown/countdown.component.html
+++ b/src/app/components/countdown/countdown.component.html
@@ -12,15 +12,17 @@
 
     <div class="time-card">
       <span class="value">{{ minutes() }}</span>
-      <span class="label">MINS</span>
+      <span class="label">MINUTES</span>
     </div>
 
     <span class="separator">:</span>
 
     <div class="time-card highlight">
-      <span class="value">{{ seconds() }}</span>
-      <span class="label">SECS</span>
+      <span class="value seconds">{{ seconds() }}</span>
+      <span class="label">SECONDS</span>
     </div>
   </div>
-  <div class="reminder"></div>
+  <div class="reminder">
+    "O you who have believed, decreed upon you is fasting as it was decreed upon those before you that you may become righteous."
+  </div>
 </div>
