--- a/src/app/components/countdown/countdown.component.scss
+++ b/src/app/components/countdown/countdown.component.scss
@@ -1,13 +1,57 @@
-:root {
-  background-color: #162e22;
-}
-
 .container {
-  padding: 2rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 
   color: white;
+  background-color: #163526;
+  border-radius: 1.5rem;
+
+  padding: 2rem;
 }
 
-.test {
-  padding-block: 20px;
+.clock-wrapper {
+  display: flex;
+  gap: 1rem;
+
+  .time-card {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    .label {
+      color: #6b7280;
+      letter-spacing: 0.1em;
+
+      font-weight: 500;
+      font-size: 14px;
+    }
+
+    .value {
+      font-weight: 900;
+      font-size: 60px;
+    }
+
+    .value.seconds {
+      color: #2bee8c;
+    }
+  }
+
+  .separator {
+    display: flex;
+    align-items: end;
+    margin-bottom: 2.3rem;
+
+    color: #4b5563;
+
+    font-size: 36px;
+    font-weight: 300;
+  }
+}
+
+.reminder {
+  color: #9db9ab;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  margin-top: 2rem;
 }
