--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 .main {
   background-color: #102219;
+  background-image: url('data:image/svg+xml,%3Csvg width=\'60\' height=\'60\' viewBox=\'0 0 60 60\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cpath d=\'M30 0l15 30-15 30L0 30z\' fill=\'%232bee8c\' fill-opacity=\'0.03\' fill-rule=\'evenodd\'/%3E%3C/svg%3E');
+  background-attachment: fixed;
   min-height: 100vh; /* Adjust 60px to your header height */
-  display: flex;
+  padding: 1rem;
 }
