--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'inter';
+  src: url("/src/assets/fonts/inter-variable.ttf") format('truetype-variations');
+
+  /* This tells the browser which weight range the file can handle */
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: 'inter', sans-serif;
+  font-weight: 400;
+
+  padding: 0;
+  margin: 0;
+}
